[gd_scene load_steps=5 format=2]

[ext_resource path="res://hud/PauseScreen.gd" type="Script" id=1]
[ext_resource path="res://hud/bg.png" type="Texture" id=2]
[ext_resource path="res://ui/default-theme.tres" type="Theme" id=3]
[ext_resource path="res://menu/main/insert-coin.tres" type="Theme" id=4]



[node name="PauseScreen" type="ReferenceRect"]
pause_mode = 2
margin_right = 640.0
margin_bottom = 360.0
rect_min_size = Vector2( 160, 210 )
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )

[node name="Bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 2 )
expand = true

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -80.0
margin_right = 320.0
size_flags_horizontal = 2
size_flags_vertical = 0
theme = ExtResource( 3 )
text = "Pause"
align = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_right = 80.0
margin_bottom = 76.0
grow_horizontal = 0
grow_vertical = 0

[node name="BtnContinue" type="Button" parent="VBoxContainer"]
margin_right = 160.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 2
theme = ExtResource( 4 )
text = "Continue"

[node name="BtnLeaveGame" type="Button" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 160.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 2
theme = ExtResource( 4 )
text = "Leave Game"
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="VBoxContainer/BtnContinue" to="." method="_on_BtnContinue_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnLeaveGame" to="." method="_on_BtnLeaveGame_pressed"]
